--- a/gengine/templates/admin_layout.html
+++ b/gengine/templates/admin_layout.html
@@ -5,3 +5,11 @@
   {{ super() }}
   <link href="{{ url_for('static', filename='admin_layout.css') }}" rel="stylesheet">
 {% endblock %}
+
+
+
+{% block tail %}
+  {{ super() }}
+  <div class="container" id="footer">Built with &#9825; at Gamification-Software.com &copy; 2015</div>
+  <script type="text/javascript" src="{{ url_for('static', filename='admin.js') }}"></script>
+{% endblock %}
