--- a/gengine/static/admin_layout.css
+++ b/gengine/static/admin_layout.css
@@ -1,3 +1,11 @@
 input, textarea, .uneditable-input {
 	width: 412px;
 }
+
+/* json syntax highlighting */
+pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
+.string { color: green; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
