show gamification-engine version in admin

--- a/gengine/templates/admin_layout.html
+++ b/gengine/templates/admin_layout.html
@@ -10,6 +10,6 @@
 
 {% block tail %}
   {{ super() }}
-  <div class="container" id="footer">Built with &#9825; at Gamification-Software.com &copy; 2015</div>
+  <div class="container" id="footer">Gamification-Engine {{gamification_engine_version}} - Built with &#9825; at Gamification-Software.com &copy; 2015</div>
   <script type="text/javascript" src="{{ url_for('static', filename='admin.js') }}"></script>
 {% endblock %}
