init alembic migrations

--- a/gengine/templates/admin/index.html
+++ b/gengine/templates/admin/index.html
@@ -66,7 +66,7 @@
 		    		
 		    		<div id="api_field_achievementid">
 		    			<label>Achievement ID</label>
-		    			<input type="number" placeholder="1">
+		    			<input type="number" value="1">
 		    		</div>
 		    		
 		    		<div id="api_field_level">
