introduce user groups

--- a/gengine/templates/admin/index.html
+++ b/gengine/templates/admin/index.html
@@ -88,6 +88,11 @@
 		    			<label>Friends</label>
 		    			<input type="text" placeholder="Enter Friends (comma separated)">
 		    		</div>
+                    
+                    <div id="api_field_groups">
+                        <label>Groups</label>
+                        <input type="text" placeholder="Enter Groups (comma separated)">
+                    </div>
 		    		
 		    		<div id="api_field_timezone">
 		    			<label>Timezone</label>
