--- a/gengine/templates/admin_layout.html
+++ b/gengine/templates/admin_layout.html
@@ -9,5 +9,6 @@
 {% block tail %}
   {{ super() }}
   <div class="container" id="footer">Gamification-Engine {{gamification_engine_version}} - Built with &#9825; at Gamification-Software.com &copy; 2015</div>
-  <script type="text/javascript" src="{{ url_for('static', filename='admin.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static_gengine', filename='api.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static_gengine', filename='admin.js') }}"></script>
 {% endblock %}
