fix css url for syntax highlighting

--- a/gengine/templates/admin_layout.html
+++ b/gengine/templates/admin_layout.html
@@ -3,7 +3,7 @@
 
 {% block head_tail %}
   {{ super() }}
-  <link href="{{ url_for('static', filename='admin_layout.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static_gengine', filename='admin_layout.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block tail %}
