--- a/gengine/tenant/templates/admin_layout.html
+++ b/gengine/tenant/templates/admin_layout.html
@@ -3,7 +3,10 @@
 
 {% block head_tail %}
   {{ super() }}
-  <link href="{{ url_for('static_gengine', filename='admin_layout.css') }}" rel="stylesheet">
+  <link href="{{ url_for('static_gengine', filename='admin_layout.css') }}" rel="stylesheet" />
+  <script>
+      API_BASE_URL = "{{ request.environ["SCRIPT_NAME"] }}";
+  </script>
 {% endblock %}
 
 {% block tail %}
