integrate user authorization into views, admin

--- a/gengine/app/templates/admin/index.html
+++ b/gengine/app/templates/admin/index.html
@@ -159,4 +159,5 @@
 
 {% block tail %}
   {{ super() }}
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 {% endblock %}
