add additional_public_data to api ui

--- a/gengine/app/templates/admin/index.html
+++ b/gengine/app/templates/admin/index.html
@@ -160,6 +160,11 @@
 		    			<input type="text" placeholder="Message-ID">
 		    		</div>
 
+                    <div id="api_field_additional_public_data">
+		    			<label>Additional Public User Data (JSON)</label>
+		    			<input type="text" placeholder="Additional Public User Data (JSON)">
+		    		</div>
+
 		    		<label>Submit</label>
 		    		<button type="submit" id="api_submit" class="btn">Submit</button>
 		  		</fieldset>
