--- a/gengine/app/templates/admin_layout.html
+++ b/gengine/app/templates/admin_layout.html
@@ -5,7 +5,7 @@
   {{ super() }}
   <link href="{{ url_for('static_gengine', filename='admin_layout.css') }}" rel="stylesheet" />
   <script>
-      API_BASE_URL = "{{ request.environ["SCRIPT_NAME"] }}";
+      API_BASE_URL = "{{ urlprefix }}";
   </script>
 {% endblock %}
 
