add user language

--- a/gengine/app/templates/admin/index.html
+++ b/gengine/app/templates/admin/index.html
@@ -104,6 +104,11 @@
 		    			<label>Timezone</label>
 		    			<input type="text" placeholder="Enter Timezone">
 		    		</div>
+
+                    <div id="api_field_language">
+		    			<label>Language</label>
+		    			<input type="text" placeholder="Enter Language">
+		    		</div>
 		    		
 		    		<div id="api_field_country">
 		    			<label>Country</label>
