work on group assignment widget

--- a/gengine/app/templates/admin_layout.html
+++ b/gengine/app/templates/admin_layout.html
@@ -9,6 +9,7 @@
       ADMIN_API_BASE_URL = API_BASE_URL+"/api";
   </script>
   <script src="{{jsmain}}"></script>
+  <link href="{{cssmain}}" rel="stylesheet" />
 {% endblock %}
 
 {% block tail %}
