work on group assignment widget

--- a/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.scss
+++ b/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.scss
@@ -3,24 +3,48 @@
     box-sizing: border-box;
   }
   width: 100%;
+  margin-bottom: 50px;
 
   .side-header {
     font-size: 1.2em;
     font-weight: bold;
-    border-bottom: 1px solid #9b9b9b;
+
   }
 
   .users {
-    display: inline-block;
     width: calc(50% - 1px);
-    border-right: 1px solid #9b9b9b;
-    padding-right: 30px;
+    padding-left: 30px;
+    vertical-align: top;
   }
 
   .groups {
-    display: inline-block;
     width: 50%;
-    padding-left: 30px;
+    vertical-align: top;
+    padding-right: 30px;
+    border-right: 1px solid #9b9b9b;
   }
 
+  .groups-list-item {
+    border-bottom: 1px solid #cccccc;
+    padding: 5px 0px;
+    color: blue;
+  }
+  .groups-list-item:last-child {
+    border-bottom: 0px;
+  }
+  .groups-list-item:hover {
+    cursor: pointer;
+    color: #9c9c9c;
+    text-decoration: underline;
+  }
+
+  .search-field {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 1px solid #9b9b9b;
+    padding: 15px 5px 15px 5px;
+    font-size: 16px;
+    border-radius: 0px;
+  }
 }
