--- a/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.css
+++ b/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.css
@@ -1,17 +1,35 @@
 .group-assignment {
-  width: 100%; }
+  width: 100%;
+  margin-bottom: 50px; }
   .group-assignment * {
     box-sizing: border-box; }
   .group-assignment .side-header {
     font-size: 1.2em;
-    font-weight: bold;
-    border-bottom: 1px solid #9b9b9b; }
+    font-weight: bold; }
   .group-assignment .users {
-    display: inline-block;
     width: calc(50% - 1px);
-    border-right: 1px solid #9b9b9b;
-    padding-right: 30px; }
+    padding-left: 30px;
+    vertical-align: top; }
   .group-assignment .groups {
-    display: inline-block;
     width: 50%;
-    padding-left: 30px; }
+    vertical-align: top;
+    padding-right: 30px;
+    border-right: 1px solid #9b9b9b; }
+  .group-assignment .groups-list-item {
+    border-bottom: 1px solid #cccccc;
+    padding: 5px 0px;
+    color: blue; }
+  .group-assignment .groups-list-item:last-child {
+    border-bottom: 0px; }
+  .group-assignment .groups-list-item:hover {
+    cursor: pointer;
+    color: #9c9c9c;
+    text-decoration: underline; }
+  .group-assignment .search-field {
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-bottom: 1px solid #9b9b9b;
+    padding: 15px 5px 15px 5px;
+    font-size: 16px;
+    border-radius: 0px; }
