--- a/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.css
+++ b/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.css
@@ -25,11 +25,22 @@
     cursor: pointer;
     color: #9c9c9c;
     text-decoration: underline; }
+  .group-assignment .groups-list-item-selected {
+    font-weight: bold;
+    border-bottom: 2px solid #cccccc; }
+  .group-assignment .search-field-wrapper {
+    border-bottom: 1px solid #9b9b9b;
+    margin-bottom: 10px; }
   .group-assignment .search-field {
     border-top: 0px;
     border-left: 0px;
     border-right: 0px;
-    border-bottom: 1px solid #9b9b9b;
-    padding: 15px 5px 15px 5px;
+    border-bottom: 0px;
+    padding: 5px 5px 5px 5px;
     font-size: 16px;
-    border-radius: 0px; }
+    border-radius: 0px;
+    width: calc(100% - 30px);
+    height: 30px;
+    outline: 0;
+    box-shadow: none !important;
+    display: inline-block; }
