--- a/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.scss
+++ b/gengine/app/jsscripts/src/components/views/group-assignment/groupAssignment.scss
@@ -89,4 +89,13 @@
     float: right;
     color: blue;
   }
+
+  .inherited-group-link {
+    color: blue;
+  }
+  .inherited-group-link:hover {
+    cursor: pointer;
+    color: #9c9c9c;
+    text-decoration: underline;
+  }
 }
