work on group refactoring

--- a/gengine/app/templates/admin_layout.html
+++ b/gengine/app/templates/admin_layout.html
@@ -15,6 +15,7 @@
 {% block tail %}
   {{ super() }}
   <div class="container" id="footer">Gamification-Engine {{gamification_engine_version}} - Built with &#9825; at Gamification-Software.com &copy; 2015-2016</div>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
   <script type="text/javascript" src="{{ url_for('static_gengine', filename='api.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static_gengine', filename='admin.js') }}"></script>
 {% endblock %}
